# WikiDex

./: .env  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Config.TOML  Dockerfile  LICENSE.md  README.md  api_input.json  awq_demo.py  batch_llama.py  docker-compose.yml  llama.py  requirements.txt
breeder/: .gitignore  Cargo.toml
breeder/breeder/: styles.txt
breeder/prompt/chat/: basic.txt  style.txt  style_gpt.txt
breeder/prompt/instruct/: markdown.md
breeder/prompt/user/: identity.txt
breeder/src/: cli_args.rs  main.rs
breeder/src/breeder/: engine.rs  unit.rs
breeder/src/breeder/mutator/: mod.rs
breeder/src/breeder/operator/: lamark.rs  mod.rs
breeder/src/config/: breeder.rs  mod.rs
breeder/src/formatter/: mod.rs  style.rs
breeder/src/inference/: error.rs
breeder/src/openai/: chat.rs  instruct.rs  kind.rs  mod.rs
core/: Cargo.toml  Dockerfile
core/breeder/: mutators.txt
core/prompt/instruct/: markdown.md
core/src/: cli_args.rs  main.rs
core/src/breeder/: engine.rs  prompt.rs
core/src/breeder/operator/: eda.rs  hyper.rs  lamark.rs  prompt.rs
core/src/config/: breeder.rs  ingest.rs  mod.rs  server.rs
core/src/docstore/: cache.rs  database.rs  document.rs  error.rs  mod.rs  postgres.rs  sqlite.rs  sqlite_docstore.rs
core/src/formatter/: document.rs  provenance.rs
core/src/index/: api.rs  error.rs  faiss_index.rs  mod.rs  service.rs
core/src/inference/: engine.rs
core/src/inference/engine/: mod.rs  sqlite.rs
core/src/ingest/: mod.rs
core/src/ingest/wikipedia/configurations/: mod.rs
core/src/ingest/wikipedia/helper/: sql.rs  text.rs
core/src/ingest/wikipedia/markup_processor/: service.rs
core/src/server/: api.rs  client.rs  launch.rs  mod.rs
face/: Cargo.toml  Dockerfile
face/src/: api.rs  engine.rs  main.rs  server.rs
face/src/index/: error.rs  mod.rs
ingest/: Cargo.toml  Dockerfile  sqlite_dummy.db
ingest/src/: cli_args.rs  main.rs
ingest/src/config/: mod.rs
ingest/src/index/: error.rs  mod.rs
ingest/src/ingest/wikipedia/: engine copy.rs  error.rs
ingest/src/ingest/wikipedia/engine/: mod.rs  posgres.rs
ingest/src/ingest/wikipedia/helper/: mod.rs  postgres.rs  (+3 more)
ingest/src/openai/: delegate.rs  mod.rs
rust/: .gitlab-ci.yml  Cargo.toml  Config.TOML  Dockerfile  Dockerfile_AMD  Dockerfile_AMD_INGEST  Dockerfile_Breeder  Dockerfile_INGEST  Dockerfile_NVIDIA  Dockerfile_NVIDIA_INGEST
rust/breeder/: m.txt  mutators.txt
rust/debug_parse/List of United States Supreme Court cases, volume 129/: parse.txt  process.txt  text.txt
rust/prompt/: A.txt  B.txt  C.txt  D.txt  E.txt
rust/prompt/chat/: markdown.txt  style.txt  style_gpt.txt
rust/prompt/instruct/: imperative.txt  markdown.txt
rust/prompt/system/: bestsofar.txt  imperative.txt  markdown.txt  style.txt  style_gpt.txt
rust/prompt/user/: cite.txt
rust/src/: cli_args.rs  config.rs  docstore.rs  embed.rs  engine.rs  index.rs  main.rs  protocol.rs  provenance.rs  server.rs  test_data.rs
rust/src/breeder/: engine.rs  mod.rs  mutator.rs  operator.rs  prompt.rs  unit.rs
rust/src/breeder/mutator/: direct.rs  hyper.rs  mean.rs  meta.rs  meta_prompt.rs  mod.rs  ordering.rs  population_prompt.rs  unit_prompt.rs
rust/src/breeder/operator/: eda.rs  first_order_meta.rs  first_order_prompt.rs  hyper.rs  lamark.rs  lineage.rs  meta.rs  mod.rs  prompt.rs  rank.rs  zero_order_meta.rs  zero_order_prompt.rs
rust/src/config/: breeder.rs  ingest.rs  mod.rs  server.rs
rust/src/docstore/: delete_this.rs  mod.rs  service.rs  sqlite_docstore.rs
rust/src/embed/: embedder.rs  error.rs  mod.rs  service.rs
rust/src/embed/async/: mod.rs  openai.rs
rust/src/embed/sync/: mod.rs
rust/src/formatter/: citation.rs  document.rs  mod.rs  provenance.rs  style.rs
rust/src/index/: error.rs  faiss_index.rs  mod.rs  service.rs
rust/src/inference/: engine.rs  error.rs  mod.rs  service.rs
rust/src/ingest/: engine.rs  error.rs  helper.rs  mod.rs  service.rs
rust/src/ingest/configurations/: mod.rs  wikipedia_org.rs
rust/src/ingest/helper/: gzip_helper.rs  mod.rs  sqlite_helper.rs  wikipedia_helper.rs
rust/src/ingest/wikipedia/: engine.rs  error.rs  mod.rs  service.rs
rust/src/llm/: error.rs  exllama_service.rs  mod.rs  openai.rs  protocol.rs  service.rs  vllm.rs
rust/src/llm/openai/: mod.rs
rust/src/openai/: builder.rs  chat.rs  completion.rs  delegate.rs  embedding.rs  error.rs  instruct.rs  mod.rs  service.rs
rust/src/server/: api.rs  mod.rs  protocol.rs  server.rs
wikidex/: Cargo.toml  Dockerfile  Dockerfile.ingest  clippy_fix_and_save.sh  convert_index.sh  openapi.json  run_ingest copy.sh  run_ingest.sh  run_test.sh  sqlite_dummy.sql
wikidex/prompt/instruct/: chat.j2  markdown-generated-examples.md  markdown-generated.j2.md  markdown-ordinal.mdj2  markdown.md.j2
wikidex/prompt/test/: imperative.txt  markdown-generated.md  markdown-ordinal.md
wikidex/src/: cli_args.rs  main.rs  test_data.rs
wikidex/src/breeder/: error.rs
wikidex/src/breeder/mutator/: direct.rs  mean.rs  selector.rs  stop_sequences.rs
wikidex/src/breeder/operator/: eda.rs  hyper.rs  prompt.rs
wikidex/src/config/: ingest.rs  mod.rs  server.rs
wikidex/src/docstore/: cache.rs  database.rs  document.rs  error.rs  mod.rs  postgres.rs  sqlite.rs
wikidex/src/embedding_client/: embedding.rs  error.rs  mod.rs
wikidex/src/formatter/: document.rs  mod.rs  provenance.rs  style.rs
wikidex/src/index/: api.rs  error.rs  mod.rs  service.rs
wikidex/src/inference/: engine.rs  error.rs  index_accumulator.rs  mod.rs
wikidex/src/ingest/: mod.rs
wikidex/src/ingest/pipeline/: document.rs  error.rs  index_converter.rs  mod.rs  processor.rs  recursive_character_text_splitter.rs
wikidex/src/ingest/plain_text/: error.rs  mod.rs
wikidex/src/ingest/wikipedia/: error.rs  mod.rs
wikidex/src/ingest/wikipedia.back/: mod.rs
wikidex/src/llm_client/: arguments.rs  client.rs  endpoint.rs  error.rs  kind.rs  mod.rs  openai.rs  protocol.rs  triton.rs  triton_helper.rs
wikidex/src/openai/: embedding.rs  mod.rs
wikidex/src/server/: api.rs  client.rs  launch.rs  mod.rs  protocol.rs
(+183 files in other folders)
