[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faiss = { git = "https://github.com/MichaelMcCulloch/faiss-rs.git",branch = "latest+avx2", features = ["static"] }
candle-core = {git = "https://github.com/huggingface/candle.git",rev = "4abc1ea34dbc834e561f442737faf2c735f0a6ce", features=["cuda", "cudnn","mkl"]}
candle-nn = {git = "https://github.com/huggingface/candle.git",rev = "4abc1ea34dbc834e561f442737faf2c735f0a6ce", features=["cuda","mkl"]}
candle-transformers={git = "https://github.com/huggingface/candle.git",rev = "4abc1ea34dbc834e561f442737faf2c735f0a6ce", features=["cuda","flash-attn","mkl"] }
candle-flash-attn={git = "https://github.com/huggingface/candle.git",rev = "4abc1ea34dbc834e561f442737faf2c735f0a6ce"}
intel-mkl-src = "0.8.1"
safetensors = "0.3.3"
serde = { version = "1.0.188"  }
serde_json = { version = "1.0.107"}
cudarc = "0.9.14"

anyhow = "1.0.75"
tokenizers = "0.14.0"
hf-hub = "0.3.1"
