[package]
name = "omnipedia"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
async-openai = { git = "https://github.com/MichaelMcCulloch/async-not-just-openai.git", tag = "0.20.0" }
backoff = "0.4.0"
bytes = "1.6.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
face-api = { git = "https://github.com/MichaelMcCulloch/face-api.git", tag = "0.1.0" }
flate2 = "1.0.28"
futures = "0.3.30"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
simsimd = "4.3.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["rt", "macros"] }
url = "2.5.0"


[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 3
debug = 0
