[package]
name = "omnipedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.80"
async-openai = { git = "https://github.com/MichaelMcCulloch/async-not-just-openai.git", tag = "0.20.0" }
# async-openai = "0.20.0"
backoff = "0.4.0"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.2"
face_api = { git = "https://github.com/MichaelMcCulloch/face-api.git", tag = "0.1.0", optional = true }
flate2 = "1.0.28"
futures = "0.3.30"
log = "0.4.20"
regex = "1.10.3"
reqwest = { version = "0.11.27", optional = true }
rayon = "1.8.1"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
url = "2.4.1"
indicatif = { version = "0.17.8", optional = true }
indicatif-log-bridge = { version = "0.2.2", optional = true }
utoipa = { version = "4.2.0", features = ["actix_extras"], optional = true }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = [
    'actix-web',
], optional = true }
simsimd = { version = "4.2.1", optional = true }
rand = { version = "0.8.5", optional = true }


[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 3
debug = 0


[features]
default = ["server", "breeder"]
server = [
    "dep:utoipa",
    "dep:utoipa-redoc",
    "dep:utoipa-swagger-ui",
    "dep:reqwest",
    "dep:face_api",
]
breeder = [
    "dep:indicatif",
    "dep:indicatif-log-bridge",
    "dep:rand",
    "dep:simsimd",
    "dep:reqwest",
    "dep:face_api",
]
