[package]
name = "omnipedia"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.80"
async-openai = { git = "https://github.com/MichaelMcCulloch/async-not-just-openai.git", tag = "0.20.0" }
backoff = "0.4.0"
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.2"
faiss = { git = "https://github.com/MichaelMcCulloch/faiss-rs.git", tag = "master-avx", features = [
    "static",
] }
flate2 = "1.0.28"
futures = "0.3.30"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
itertools = "0.12.1"
log = "0.4.20"
parse_mediawiki_dump_reboot = "1.0.1"
parse_wiki_text = "0.1.5"
rayon = "1.8.1"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
url = "2.4.1"

[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 3
debug = 0
