[package]
name = "omnipedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-openai = { git = "https://github.com/MichaelMcCulloch/async-openai-vllm.git", branch = "main" }
backoff = "0.4.0"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
faiss = { git = "https://github.com/MichaelMcCulloch/faiss-rs.git", branch = "latest+avx2", features = [
    "static",
] }
flate2 = "1.0.27"
futures = "0.3.28"
log = "0.4.20"

regex = "1.9.6"
rayon = "1.8.0"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }
url = "2.4.1"

indicatif = { version = "0.17.7", optional = true }
indicatif-log-bridge = { version = "0.2.2", optional = true }
parse_mediawiki_dump_reboot = { version = "1.0.1", optional = true }
parse_wiki_text = { version = "0.1.5", optional = true }

utoipa = { version = "4.0.0", features = ["actix_extras"], optional = true }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"], optional = true }

[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 3
debug = 0


[features]
default = ["server", "ingest"]
server = ["dep:utoipa", "dep:utoipa-redoc"]
ingest = [
    "dep:parse_mediawiki_dump_reboot",
    "dep:parse_wiki_text",
    "dep:indicatif",
    "dep:indicatif-log-bridge",
]
