[package]
name = "wikidex"
version = "0.1.0"
edition = "2021"

[dependencies]

# Common
actix-rt = { version = "2.9.0" }
actix-web = { version = "4.5.1" }
anyhow = { version = "1.0.81" }
async-openai = { git = "https://github.com/MichaelMcCulloch/async-not-just-openai.git", tag = "0.20.0" }
async-stream = { version = "0.3.5" }
backoff = { version = "0.4.0" }
bytes = { version = "1.6.0" }
chrono = { version = "0.4.37", features = ["rkyv", "serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = { version = "2.1.0" }
env_logger = { version = "0.11.3", features = ["color"] }
flate2 = { version = "1.0.28" }
futures = { version = "0.3.30" }
http = { version = "1.1.0", optional = true }
log = { version = "0.4.21" }
regex = { version = "1.10.4" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.115" }
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
tera = { version = "1.19.1" }
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "time",
] }
tonic = { version = "0.11.0" }
trtllm = { git = "https://github.com/MichaelMcCulloch/trtllm.git", tag = "0.2.1-lib" }
url = { version = "2.5.0" }

# Server
actix-cors = { version = "0.7.0", optional = true }
face-api = { git = "https://github.com/MichaelMcCulloch/face-api.git", tag = "0.1.1", optional = true }
redis = { version = "0.25.3", features = [
    "aio",
    "tokio-comp",
], optional = true }
rkyv = { version = "0.7.44", features = ["std", "bytecheck"], optional = true }
utoipa = { version = "4.2.0", features = ["actix_extras"], optional = true }
utoipa-redoc = { version = "3.0.0", features = ["actix-web"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = [
    'actix-web',
], optional = true }

# Ingest
async-compat = { version = "0.2.3", optional = true }
faiss = { git = "https://github.com/MichaelMcCulloch/faiss-rs.git", tag = "master-avx", features = [
    "static",
], optional = true }
indicatif = { version = "0.17.8", optional = true }
indicatif-log-bridge = { version = "0.2.2", optional = true }
itertools = { version = "0.12.1", optional = true }
parse_mediawiki_dump_reboot = { version = "1.0.1", optional = true }
parse_wiki_text = { version = "0.1.5", optional = true }
rayon = { version = "1.10.0", optional = true }
nebula-client = { git = "https://github.com/bk-rs/nebula-rs", branch = "main", optional = true }
fbthrift-transport = { version = "0.9.0", features = [
    "impl_tokio",
], optional = true }
nebula-fbthrift-graph-v3 = { version = "0.3.0", optional = true }

[profile.release]
lto = true
strip = true

[profile.test]
opt-level = 3
debug = 0

[features]
default = ["postgres", "server"]
server = [
    "dep:actix-cors",
    "dep:face-api",
    "dep:redis",
    "dep:rkyv",
    "dep:utoipa-redoc",
    "dep:utoipa-swagger-ui",
    "dep:utoipa",
]
ingest = [
    "dep:async-compat",
    # "dep:faiss",
    "dep:fbthrift-transport",
    "dep:http",
    "dep:indicatif-log-bridge",
    "dep:indicatif",
    "dep:itertools",
    "dep:nebula-client",
    "dep:nebula-fbthrift-graph-v3",
    "dep:parse_mediawiki_dump_reboot",
    "dep:parse_wiki_text",
    "dep:rayon",
]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
